<resources>
    <string name="app_name">SubMate</string>
    <string name="image_content_description">violet background</string>
    <string name="email_input">Your Email</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your Name</string>
    <string name="deaf_button">I am Hearing Impaired</string>
    <string name="healthy_speaker_button">I am a Healthy Speaker</string>
    <string name="deaf_menu">*Menu for Deaf Individuals*</string>
    <string name="healthy_speaker_menu">*Menu for Healthy Speaker*</string>
    <string name="hearing_button_description">Hearing button description</string>
    <string name="name_back">Create name background</string>
    <string name="options_settings">Settings</string>
    <string name="options_profile">Profile</string>
    <string name="create_name">Enter your Name</string>
    <string name="confirm">Confirm</string>
    <string name="app_logo_description">app logo</string>
    <string name="type_a_message">Message</string>
    <string name="time_and_date">Time and Date</string>
    <string name="robin_almorfi">Robin Almorfi</string>
    <string name="profile">Profile</string>
    <string name="set_your_name_and_profile">Set your name and Profile</string>
    <string name="continue_btn">Continue</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="avatar">Avatar</string>
    <string name="change">Change</string>
    <string name="username">Username</string>
    <string name="enter_new_username">Enter your new username</string>
    <!-- Strings used for fragments for navigation -->
</resources>
